# knap-editor

./: Cargo.toml  LICENSE  README.md
crates/knap/: Cargo.toml
crates/knap/src/: buffer.rs  command_bar.rs  editor.rs  highlighter.rs  main.rs  math.rs  message_bar.rs  status_bar.rs  terminal.rs  text_line.rs  view.rs
crates/knap_base/: Cargo.toml
crates/knap_base/src/: color.rs  math.rs
crates/knap_core/: Cargo.toml
crates/knap_core/src/: code_view.rs  command_bar.rs  highlighter.rs  message_bar.rs
crates/knap_edit/: Cargo.toml
crates/knap_edit/src/: buffer.rs  command_bar.rs  commands.rs  editor.rs  highlighter.rs  lib.rs  message_bar.rs  search.rs  status_bar.rs  text_line.rs  view.rs
crates/knap_ui/: Cargo.toml
crates/knap_ui/src/: lib.rs  text_box.rs
crates/knap_ui/src/text_box/: mod.rs  text_box.rs  text_box_impl.rs  text_highlights.rs  text_line.rs
crates/knap_ui/src/text_buffer/: core.rs  mod.rs  rope_text_buffer.rs  vec_text_buffer.rs
crates/knap_window/: Cargo.toml
crates/knap_window/src/: drawer.rs  lib.rs  terminal.rs  window.rs
docs/dev/: references.md
src/: buffer.rs  command_bar.rs  commands.rs  drawer.rs  editor.rs  highlighter.rs  main.rs  math.rs  message_bar.rs  search.rs  status_bar.rs  terminal.rs  text_line.rs  view.rs  window.rs
