[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
print_stdout = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
integer_division = "warn"

new_without_default = "allow"

# review these lints again once the codebase is more mature
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
