[package]
name = "knap_edit"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
crossterm = "0.28.1"
knap_base = { path = "../knap_base" }
knap_ui = { path = "../knap_ui" }
knap_window = { path = "../knap_window" }
regex = "1.11.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[lints]
workspace = true
